--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,17 @@
 body {
   padding: 30px;
-  background-color: #ccc;
 }
 
 .App {
   font-family: sans-serif;
   text-align: center;
   position: relative;
-  background-color: chocolate;
 }
 
 .bookmark-row {
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin: 10px;
+  margin: 10px 0;
   padding: 10px;
   background-color: #eee;
 }
